fix: 프백 타입불일치 해결
